#7 [chore] viewModel 파일 위치 이동

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Softie</string>
+    <string name="onboarding_choice_theme_btn">다 선택했어</string>
 </resources>
