--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Softie</string>
+
+    <!-- story telling -->
+    <string name="story_telling_intro">오늘도 고된 하루였어..</string>
 </resources>
