#10 [ui] 카테고리 리스트 item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="chip_item_happy_resilience">회복탄력성</string>
     <string name="chip_item_happy_new_me">새로운 나</string>
     <string name="chip_item_happy_mindfulness">마음 챙김</string>
+    <string name="happy_list_item_content">성숙한 사랑을 만나기 위한</string>
 </resources>
