--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
 
     <!-- doll selection -->
     <string name="doll_selection_question">어떤 친구와 함께 할까요?</string>
-    <string name="doll_selection_subtitle">힌 번 선택한 인형은 바꿀 수 없어요</string>
+    <string name="doll_selection_subtitle">한 번 선택한 인형은 바꿀 수 없어요</string>
+    <string name="doll_selection_button">이 친구와 함께 할래</string>
 </resources>
