--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,12 @@
     <string name="happy_default_mention">행복 루틴은 매일 조금씩 너에 대해\n알아갈 수 있는 특별한 이벤트형 루틴이야!</string>
     <string name="happy_empty_card">진행 중인 행복루틴이 없어요.\n루틴을 추가할까요?</string>
 
-    <!-- doll selection -->
-    <string name="doll_selection_question">어떤 친구와 함께 할까요?</string>
-    <string name="doll_selection_subtitle">한 번 선택한 인형은 바꿀 수 없어요</string>
-    <string name="doll_selection_button">이 친구와 함께 할래</string>
+    <!-- bear selection -->
+    <string name="bear_selection_question">어떤 친구와 함께 할까요?</string>
+    <string name="bear_selection_subtitle">한 번 선택한 인형은 바꿀 수 없어요</string>
+    <string name="bear_selection_button">이 친구와 함께 할래</string>
+
+    <!-- bear naming -->
+    <string name="bear_naming_question">좋은 선택이에요!/n친구 이름도 지어볼까요?</string>
+    <string name="bear_naming_subtitle">한 번 지은 이름은 평생 가요.</string>
 </resources>
