--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,14 @@
     <string name="doll_selection_question">어떤 친구와 함께 할까요?</string>
     <string name="doll_selection_subtitle">한 번 선택한 인형은 바꿀 수 없어요</string>
     <string name="doll_selection_button">이 친구와 함께 할래</string>
+
+    <!-- setting -->
+    <string name="setting_title">설정</string>
+    <string name="setting_user_security">개인정보 처리방침</string>
+    <string name="setting_document">서비스 이용 약관</string>
+    <string name="setting_guide">서비스 이용 가이드</string>
+    <string name="setting_feedback">피드백</string>
+    <string name="setting_version">현재 버전 1.0.0</string>
+    <string name="setting_logout">로그아웃</string>
+    <string name="setting_user_exit"><u>회원 탈퇴</u></string>
 </resources>
