--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,9 @@
     <string name="doll_selection_question">어떤 친구와 함께 할까요?</string>
     <string name="doll_selection_subtitle">한 번 선택한 인형은 바꿀 수 없어요</string>
     <string name="doll_selection_button">이 친구와 함께 할래</string>
+
+    <!-- bottom navigation -->
+    <string name="bottom_navigation_progress">진행 중</string>
+    <string name="bottom_navigation_home">홈</string>
+    <string name="bottom_navigation_happiness_routine">행복 루틴</string>
 </resources>
