[chore] 삭제 비활성화 버튼 추가 및 버튼 패딩 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="daily_routine_fin_btn">완료하기</string>
     <string name="daily_routine_fin">달성완료</string>
     <string name="daily_routine_edit">편집</string>
+    <string name="daily_routine_edit_delete_nothing">0개 삭제</string>
 </resources>
