--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,10 @@
     <string name="home_happiness_cotton_btn">행복 솜뭉치 주기</string>
     <string name="home_daily_cotton_btn">솜뭉치 주기</string>
 
+    <!-- daily routine add -->
+    <string name="daily_routine_add_question">데일리 루틴을 추가할까요?</string>
+    <string name="daily_routine_content">일어나면 5분 안에 이불개기</string>
+    <string name="daily_routine_add_no">아니, 더 고민할게</string>
+    <string name="daily_routine_add_yes">추가할래</string>
+
 </resources>
