--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,9 @@
     <string name="happy_progress_mention">달성 중...</string>
     <string name="happy_progress_button">완료하기</string>
 
+    <!-- happy delete -->
+    <string name="happy_delete_destroy">취소</string>
+
     <!-- doll selection -->
     <string name="doll_selection_question">어떤 친구와 함께 할까요?</string>
     <string name="doll_selection_subtitle">한 번 선택한 인형은 바꿀 수 없어요</string>
