--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
 
     <!-- happy delete -->
     <string name="happy_delete_destroy">취소</string>
+    <string name="happy_delete_button">삭제하기</string>
 
     <!-- doll selection -->
     <string name="doll_selection_question">어떤 친구와 함께 할까요?</string>
