#101 [fix] 기획 String 문구 변경 반영

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,7 +76,7 @@
     <string name="happy_delete_button">삭제하기</string>
     <string name="happy_delete_bottom_sheet_title">정말 삭제할까요?</string>
     <string name="happy_delete_bottom_sheet_do_btn">삭제할래</string>
-    <string name="happy_delete_bottom_sheet_back_btn">취소</string>
+    <string name="happy_delete_bottom_sheet_back_btn">더 생각해볼래</string>
 
     <!-- doll selection -->
     <string name="doll_selection_question">어떤 친구와 함께 할까요?</string>
