--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,7 +166,7 @@
     <string name="daily_routine_content">일어나면 5분 안에 이불개기</string>
     <string name="daily_routine_add_no">아니, 더 고민할게</string>
     <string name="daily_routine_add_yes">추가할래</string>
-    <string name="daily_routine_snack_bar">데일리 루틴을 1개 추가했어요</string>
+    <string name="daily_routine_add_snack_bar">데일리 루틴을 1개 추가했어요</string>
     <string name="daily_routine_basic_bottom_sheet_content">언제든지 변경할 수 있어요!</string>
     <string name="daily_routine_edit_delete_notice">루틴을 삭제해도 달성 횟수는 저장돼요</string>
     <string name="daily_routine_edit_delete_question">정말 삭제할까요?</string>
