--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,7 +132,7 @@
     <string name="bear_naming_subtitle">한 번 지은 이름은 평생 가요.</string>
     <string name="bear_naming_hint">소프티</string>
     <string name="bear_naming_button">이 이름이 좋겠어</string>
-    <string name="bear_naming_special_character_warning">*특수문자는 사용할 수 없어요</string>
+    <string name="bear_naming_special_character_warning">*숫자와 특수문자는 사용할 수 없어요</string>
     <string name="bear_naming_length_warning">*10글자 이내로 작성해 주세요.</string>
 
     <!-- daily routine edit -->
