#141 [qa] 스플래시 문구 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string name="doll_selection_button">이 친구와 함께 할래</string>
 
     <!-- splash -->
-    <string name="splash_content">사소한 루틴으로 만드는 마음습관</string>
+    <string name="splash_content">하루를 바꾸는 가장 사소한 루틴</string>
 
     <!-- bottom navigation -->
     <string name="bottom_navigation_daily_routine">데일리 루틴</string>
