--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,4 +164,8 @@
     <string name="daily_routine_snack_bar">데일리 루틴을 1개 추가했어요</string>
     <string name="daily_routine_basic_bottom_sheet_content">언제든지 변경할 수 있어요!</string>
 
+    <!-- update dialog -->
+    <string name="dialog_update_next_time_btn">다음에 할래요</string>
+    <string name="dialog_update_btn">업데이트</string>
+
 </resources>
