--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,7 +165,8 @@
     <string name="daily_routine_basic_bottom_sheet_content">언제든지 변경할 수 있어요!</string>
 
     <!-- update dialog -->
-    <string name="dialog_update_next_time_btn">다음에 할래요</string>
-    <string name="dialog_update_btn">업데이트</string>
+    <string name="dialog_update_recommend_deny_btn">다음에 할래요</string>
+    <string name="dialog_update_recommend_confirm_btn">업데이트</string>
+    <string name="dialog_update_force_btn">업데이트 하러가기</string>
 
 </resources>
