#142 [feat] 버전 정보 api 연결(ft. 헤더 차이로 인한 module 추가)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,6 +168,8 @@
     <string name="dialog_update_recommend_deny_btn">다음에 할래요</string>
     <string name="dialog_update_recommend_confirm_btn">업데이트</string>
     <string name="dialog_update_force_btn">업데이트 하러가기</string>
+    <string name="dialog_update_title">새로운 버전이 업데이트 되었어요!</string>
+    <string name="dialog_update_content">안정적인 서비스 사용을 위해\n최신버전으로 업데이트해주세요.</string>
     <string name="binding_error">Binding not initialized to reference the view.</string>
     <string name="dialog_update_store_link">https://softie-link.notion.site/675961135bbf436d82a33065c91a61b6</string>
 
