--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,4 +180,10 @@
     <string name="binding_error">Binding not initialized to reference the view.</string>
     <string name="dialog_update_store_link">https://play.google.com/store/apps/details?id=com.sopetit.softie</string>
 
+    <!-- tutorial -->
+    <string name="home_tutorial_title_routine">소프티엔 총 2가지 루틴이 있어요!</string>
+    <string name="home_tutorial_title_cotton">솜뭉치를 얻으면?</string>
+    <string name="home_tutorial_btn_next">다음</string>
+    <string name="home_tutorial_btn_start">시작하기</string>
+
 </resources>
