#175 [chore] text style 정리 및 daily routine 파일 삭제

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,4 +186,7 @@
     <string name="home_tutorial_btn_next">다음</string>
     <string name="home_tutorial_btn_start">시작하기</string>
 
+    <!-- ongoing -->
+    <string name="ongoing_complete_btn">완료하기</string>
+
 </resources>
