#176 [feat] dim 다이얼로그 적용

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,6 +189,10 @@
     <string name="binding_error">Binding not initialized to reference the view.</string>
     <string name="dialog_update_store_link">https://play.google.com/store/apps/details?id=com.sopetit.softie</string>
 
+    <!-- maker dialog -->
+    <string name="maker_help_dialog_title">루틴메이커 테마란?</string>
+    <string name="maker_help_dialog_content">전문가들이 만드는 루틴을 직접 실천해 볼 수 있는 테마에요.</string>
+
     <!-- tutorial -->
     <string name="home_tutorial_title_routine">소프티엔 총 2가지 루틴이 있어요!</string>
     <string name="home_tutorial_title_cotton">솜뭉치를 얻으면?</string>
