--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="onboarding_routine_back_btn">테마 다시 고를래</string>
     <string name="onboarding_routine_select_btn">친구 만날 준비 끝!</string>
     <string name="onboarding_routine_notice">최대 3개 선택 가능합니다</string>
+    <string name="onboarding_routine_choice_btn">루틴을 3개 선택해 주세요</string>
 
     <!-- story telling -->
     <string name="story_telling_intro">오늘도 고된 하루였어..</string>
